# openrisc

trunk/gdb/gdb-6.8/sim/or32/: configure  configure.ac  or32sim.h  wrapper.c
trunk/rtems/c/src/exec/sapi/include/: Makefile.am  confdefs.h
trunk/rtems/c/src/exec/sapi/include/rtems/: directives.h  extension.h  fatal.h  sptables.h.in
trunk/rtems/c/src/exec/sapi/inline/rtems/: Makefile.am
trunk/rtems/c/src/exec/score/cpu/: Makefile.am
trunk/rtems/c/src/exec/score/cpu/a29k/: amd.ah  cpu.c  pswmacro.ah  sig.S
trunk/rtems/c/src/exec/score/cpu/a29k/rtems/: Makefile.am
trunk/rtems/c/src/exec/score/cpu/hppa1.1/: cpu.c  rtems.S
trunk/rtems/c/src/exec/score/cpu/hppa1.1/rtems/: Makefile.am
trunk/rtems/c/src/exec/score/cpu/i386/: cpu.c  cpu_asm.S  rtems.S
trunk/rtems/c/src/exec/score/cpu/i386/rtems/: Makefile.am
trunk/rtems/c/src/exec/score/cpu/i960/: Makefile.am  asm.h  cpu.c  rtems.S
trunk/rtems/c/src/exec/score/cpu/i960/rtems/: Makefile.am
trunk/rtems/c/src/exec/score/cpu/m68k/: Makefile.am  asm.h  configure.in  m68302.h  qsm.h  sim.h
trunk/rtems/c/src/exec/score/cpu/m68k/rtems/: Makefile.am
trunk/rtems/c/src/exec/score/cpu/mips64orion/: Makefile.am  configure.in  cpu_asm.S  cpu_asm.h  idtmon.h  iregdef.h  rtems.c
trunk/rtems/c/src/exec/score/cpu/no_cpu/: Makefile.am  cpu_asm.c
trunk/rtems/c/src/exec/score/cpu/or1k/: asm.h  rtems.s
trunk/rtems/c/src/exec/score/cpu/powerpc/: Makefile.am
trunk/rtems/c/src/exec/score/cpu/powerpc/new_exception_processing/: Makefile.am  cpu.c
trunk/rtems/c/src/exec/score/cpu/powerpc/old_exception_processing/: README  cpu.c  cpu.h  cpu_asm.S  irq_stub.S  rtems.S
trunk/rtems/c/src/exec/score/cpu/powerpc/shared/: Makefile.am  asm.h  ppc.h  ppctypes.h
trunk/rtems/c/src/exec/score/cpu/sh/: asm.h  cpu_asm.c  ispsh7032.c  rtems.c
trunk/rtems/c/src/exec/score/cpu/sparc/: README  rtems.S
trunk/rtems/c/src/exec/score/cpu/sparc/rtems/: Makefile.am
trunk/rtems/c/src/exec/score/cpu/unix/: configure.in
trunk/rtems/c/src/exec/score/cpu/unix/rtems/: Makefile.am
trunk/rtems/c/src/exec/wrapup/: Makefile.am
trunk/rtems/c/src/exec/wrapup/itron/: Makefile.am
trunk/rtems/c/src/exec/wrapup/posix/: Makefile.am
trunk/rtems/c/src/lib/libbsp/no_cpu/no_bsp/: configure.in  times
trunk/rtems/c/src/lib/libbsp/no_cpu/no_bsp/clock/: ckinit.c
trunk/rtems/c/src/lib/libbsp/no_cpu/no_bsp/include/: Makefile.am
trunk/rtems/c/src/lib/libbsp/no_cpu/no_bsp/shmsupp/: Makefile.am  lock.c
trunk/rtems/c/src/lib/libbsp/no_cpu/no_bsp/startup/: Makefile.am  setvec.c
trunk/rtems/c/src/lib/libbsp/no_cpu/no_bsp/timer/: timer.c
trunk/rtems/c/src/lib/libbsp/no_cpu/no_bsp/wrapup/: Makefile.am
trunk/rtems/c/src/lib/libbsp/sh/gensh1/include/: Makefile.am  bsp.h  coverhd.h
trunk/rtems/c/src/lib/libbsp/sparc/erc32/tools/: configure.in  runtest.in
trunk/rtems/make/: Makefile.am  README  leaf.cfg  lib.cfg  main.cfg
trunk/rtems/make/Templates/: Makefile.dir
trunk/rtems/make/custom/: HPUX9-posix.cfg  Linux-posix.cfg  Makefile.am  bare.cfg  cvme961.cfg  default.cfg  dmv152.cfg  efi68k.cfg  erc32.cfg  gen68302.cfg  gen68360_040.cfg  gensh1.cfg  helas403.cfg  i386ex.cfg  mcp750.cfg  mvme147.cfg  mvme162lx.cfg  mvme167.cfg  no_bsp.cfg  p4000.cfg  p4600.cfg  portsw.cfg
trunk/rtems/tools/cpu/: configure.in
trunk/rtems/tools/cpu/generic/: size_rtems.in
trunk/rtems/tools/cpu/sh/: Makefile.am
trunk/rtems/tools/cpu/unix/: configure.in  gensize.c
trunk/rtos/rtems/c/make/: Makefile.am  target.cfg.in
trunk/rtos/rtems/c/src/exec/score/cpu/or1k/: Makefile.am  configure.in
trunk/rtos/rtems/c/src/lib/libbsp/a29k/: Makefile.am
trunk/rtos/rtems/c/src/lib/libbsp/a29k/portsw/: Makefile.am  (+2 more)
trunk/rtos/rtems/c/src/lib/libbsp/bare/: Makefile.am  build-tools  configure.in  do-bare-bsp-build
trunk/rtos/rtems/c/src/librdbg/src/: Makefile.am  _servtgt.c  ptrace.c  servcon.c  servrpc.c  servutil.c
trunk/rtos/rtems/c/src/librdbg/src/i386/: excep_f.c
trunk/rtos/rtems/c/src/librdbg/src/powerpc/: rdbg_f.c
trunk/rtos/rtems/c/src/make/compilers/: Makefile.am
trunk/rtos/rtems/c/src/tests/itrontests/: Makefile.am  README  configure.in
trunk/rtos/rtems/c/src/tests/itrontests/itronhello/: Makefile.am  itronhello.doc  system.h
trunk/rtos/rtems/c/src/tests/itrontests/itronmbf01/: init.c  itronmbf01.doc  system.h
trunk/rtos/rtems/c/src/tests/itrontests/itronmbox01/: system.h
trunk/rtos/rtems/c/src/tests/itrontests/itrontask01/: Makefile.am  system.h  task1.c
trunk/rtos/rtems/c/src/tests/itrontests/itrontask02/: Makefile.am  dormant.c  init.c
trunk/rtos/rtems/c/src/tests/itrontests/itrontask03/: init.c  itrontask03.doc  preempt.c  system.h  task1.c
trunk/rtos/rtems/c/src/tests/itrontests/itrontask04/: Makefile.am  task3.c
trunk/rtos/rtems/c/src/tests/itrontests/itrontime01/: Makefile.am  system.h
trunk/rtos/rtems/c/src/tests/mptests/: Makefile.am  README  configure.in
trunk/rtos/rtems/c/src/tests/mptests/mp01/: init.c
trunk/rtos/rtems/c/src/tests/mptests/mp02/: Makefile.am  system.h  task1.c
trunk/rtos/rtems/c/src/tests/mptests/mp03/: init.c  system.h
trunk/rtos/rtems/c/src/tests/mptests/mp04/: Makefile.am
trunk/rtos/rtems/c/src/tests/mptests/mp05/: Makefile.am  asr.c  system.h  task1.c
trunk/rtos/rtems/c/src/tests/mptests/mp07/: task1.c
trunk/rtos/rtems/c/src/tests/mptests/mp09/: Makefile.am  recvmsg.c  system.h
trunk/rtos/rtems/c/src/tests/mptests/mp10/: init.c  system.h  task1.c  task2.c  task3.c
trunk/rtos/rtems/c/src/tests/mptests/mp11/: Makefile.am  init.c
trunk/rtos/rtems/c/src/tests/mptests/mp12/: Makefile.am  system.h
trunk/rtos/rtems/c/src/tests/mptests/mp13/: Makefile.am  task2.c
trunk/rtos/rtems/c/src/tests/mptests/mp14/: delay.c  init.c  msgtask1.c  pttask1.c
trunk/rtos/rtems/c/src/tests/support/include/: Makefile.am
trunk/rtos/rtems/c/src/tests/tmitrontests/: Makefile.am  README
trunk/rtos/rtems/c/src/tests/tmitrontests/tmitronsem01/: system.h  tmitronsem01.doc
trunk/rtos/rtems/tools/cpu/generic/: Makefile.am  configure.in
trunk/rtos/rtems/tools/cpu/hppa1.1/: Makefile.am  configure.in  genoffsets.c
(+4875 files in other folders)
