dnl Process this file with autoconf to produce a configure script.
dnl
dnl  $Id: configure.in,v 1.2 2001-09-27 12:02:53 chris Exp $

AC_INIT(generic)
RTEMS_TOP(../..)
AC_CONFIG_AUX_DIR(../..)

RTEMS_CANONICAL_TARGET_CPU

AM_INIT_AUTOMAKE(rtems-tools-cpu,$RTEMS_VERSION,no)
AM_MAINTAINER_MODE

RTEMS_PATH_KSH

RTEMS_TOOLPATHS
AC_SUBST(program_prefix)

AC_CONFIG_SUBDIRS(generic)
if test -d $srcdir/$RTEMS_CPU; then
AC_CONFIG_SUBDIRS($RTEMS_CPU)
fi

# Explicitly list all Makefiles here
AC_OUTPUT(Makefile)
