dnl Process this file with autoconf to produce a configure script.
dnl
dnl  $Id: configure.in,v 1.2 2001-09-27 12:02:53 chris Exp $    

AC_INIT(genoffsets.c)
RTEMS_TOP(../../..)
AC_CONFIG_AUX_DIR(../../..)

RTEMS_CANONICAL_TARGET_CPU

AM_INIT_AUTOMAKE(rtems-tools-cpu-hppa1.1,$RTEMS_VERSION,no)
AM_MAINTAINER_MODE
AC_EXEEXT

AC_PROG_CC

RTEMS_TOOLPATHS

# Explicitly list all Makefiles here
AC_OUTPUT(Makefile)
