##
##  $Id: Makefile.am,v 1.2 2001-09-27 11:59:21 chris Exp $
##

AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = $(RTEMS_CPU)

## FIXME: this does not work
## DIST_SUBDIRS = \
## a29k hppa1.1 i386 i960 m68k mips64orion no_cpu powerpc sh sparc unix

include $(top_srcdir)/../../../automake/subdirs.am
include $(top_srcdir)/../../../automake/local.am
