##
## $Id: Makefile.am,v 1.2 2001-09-27 12:02:01 chris Exp $
##

AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = $(RTEMS_CPU)

EXTRA_DIST = _servtgt.c awk.svc excep.c ptrace.c rdbg.c remdeb.x servbkpt.c \
    servcon.c servrpc.c servtgt.c servtsp.c servutil.c

include $(top_srcdir)/../../../automake/subdirs.am
include $(top_srcdir)/../../../automake/local.am
