##
## $Id: Makefile.am,v 1.2 2001-09-27 12:02:08 chris Exp $
##

AUTOMAKE_OPTIONS = foreign 1.4
ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal

SUBDIRS = itronhello itrontask01 itrontask02 itrontask03 itrontask04 \
    itronmbf01 itronmbox01 itronsem01 itrontime01

EXTRA_DIST = itrontests.am

include $(top_srcdir)/../../../../automake/subdirs.am
include $(top_srcdir)/../../../../automake/local.am
