##
## $Id: Makefile.am,v 1.2 2001-09-27 12:02:38 chris Exp $
##

AUTOMAKE_OPTIONS = foreign 1.4
ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal

ITRON_DIRS = include tmitronsem01

SUBDIRS = $(ITRON_DIRS)

EXTRA_DIST = tmitrontests.am

include $(top_srcdir)/../../../../automake/subdirs.am
include $(top_srcdir)/../../../../automake/local.am
