dnl Process this file with autoconf to produce a configure script.
dnl
dnl  $Id: configure.in,v 1.2 2001-09-27 12:01:14 chris Exp $

AC_INIT(runtest.in)
RTEMS_TOP(../../../../../../..)
AC_CONFIG_AUX_DIR(../../../../../../..)

RTEMS_CANONICAL_TARGET_CPU

AM_INIT_AUTOMAKE(rtems-c-src-lib-libbsp-sparc-erc32-tools,$RTEMS_VERSION,no)
AM_MAINTAINER_MODE

RTEMS_PATH_KSH

RTEMS_PROJECT_ROOT
RTEMS_TOOLPATHS

# Explicitly list all Makefiles here
AC_OUTPUT( 
Makefile
runtest)
